<resources>
    <string name="detail_name">Name</string>
    <string name="detail_tags">Tags</string>
    <string name="detail_country">Country</string>
    <string name="detail_create_shortcut">Add to home screen</string>
    <string name="detail_language">Language</string>
    <string name="detail_weblink">Weblink</string>
    <string name="detail_visit_website">@string/action_station_visit_website</string>
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="detail_share">Share</string>
    <string name="detail_play_in_radiodroid">Play in RadioDroid</string>
    <string name="action_links">Links</string>
    <string name="action_homepage">Homepage</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_alarm">Alarm</string>
    <string name="action_station_visit_website">Visit Website</string>
    <string name="action_station_copy_stream_url">Copy Stream URL</string>
    <string name="action_station_share">Share</string>
    <string name="action_local">Local</string>
    <string name="action_skip_to_next">Next</string>
    <string name="action_pause">Pause</string>
    <string name="action_skip_to_previous">Previous</string>
    <string name="action_resume">Resume</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_history">Delete history</string>
    <string name="action_delete_favorites">Delete favorites</string>
    <string name="action_delete_stream_history">Clear track history</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_top_click">Top Click</string>
    <string name="action_toggle_view">Toggle view</string>
    <string name="action_top_vote">Top Vote</string>
    <string name="action_changed_lately">Changed Lately</string>
    <string name="action_currently_playing">Playing</string>
    <string name="action_tags">Tags</string>
    <string name="action_countries">Countries/Regions</string>
    <string name="action_languages">Languages</string>
    <string name="action_edit">Edit</string>
    <string name="action_lyrics">Lyrics</string>
    <string name="action_copy_info">Copy Info</string>
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>
    <string name="share_action">Share station link with..</string>
    <string name="nav_item_stations">Stations</string>
    <string name="nav_item_starred">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_alarm">Alarm</string>
    <string name="about_text">This app uses the free radio station directory at\nhttps://www.radio-browser.info\nEveryone can add stations to it or edit existing stations. It works like a wiki for online (streaming) radio stations.\n\nContact:\nsegler_alex@web.de\n\nBugtracker:\nhttps://github.com/segler-alex/RadioDroid/issues\n\nIf you like the software and want to help, feel free to send me an email. I really need someone with graphical experience to make the app nicer to the eye :) Maybe someone who can draw icons, images...but also programmers who fix bugs, or implement new ones (features not bugs ;)\nAlso ideas for new features are always appreciated!\n\nThis app is free software licensed under the GPLv3.\nhttps://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version">Version: %1$s</string>
    <string name="detail_star">Add to favorites</string>
    <string name="detail_unstar">Delete from favorites</string>
    <string name="detail_play_in_external_player">@string/action_play_in_external</string>
    <string name="progress_loading">Loading...</string>
    <string name="sleep_timer" formatted="true">Sleep timer: %1$02d:%2$02d</string>
    <string name="sleep_timer_title">Stop playing after the selected minute</string>
    <string name="sleep_timer_apply">Apply</string>
    <string name="sleep_timer_clear">Clear</string>
    <string name="nav_item_add_sleep">Sleep timer</string>
    <string name="nav_item_save_playlist">Export favorites as playlist</string>
    <string name="nav_item_load_playlist">Import favorites from playlist</string>
    <string name="nav_item_save_history_playlist">Export history as playlist</string>
    <string name="confirm_overwrite_file">Overwrite the file?</string>
    <string name="dialog_hint_file_name">Enter file name</string>
    <string name="error_empty_field">This field is required</string>
    <string name="error_invalid_file_name">Invalid file name</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_overwrite">Overwrite</string>
    <string name="notify_load_playlist_nok">Could not import from %1$s&#47;%2$s</string>
    <string name="notify_load_playlist_now">Importing from %1$s&#47;%2$s, please wait.</string>
    <string name="notify_load_playlist_ok">Imported %1$d stations from %2$s&#47;%3$s</string>
    <string name="notify_save_playlist_nok">Could not export to %1$s&#47;%2$s</string>
    <string name="notify_save_playlist_now">Exporting to %1$s&#47;%2$s, please wait.</string>
    <string name="notify_save_playlist_ok">Exported to %1$s&#47;%2$s successfully</string>
    <string name="notify_sync_list_deleted_entries">%1$d of %2$d local stations in the list marked non-existent on the server</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_results">No results</string>
    <string name="searchpreference_search">Search…</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme_selection_title">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_circular_icons">Use circular icons</string>
    <string name="settings_compact_style">Compact mode</string>
    <string name="settings_compact_style_desc_off">Large icon adopted with station details</string>
    <string name="settings_compact_style_desc_on">Small icon adopted without station details</string>
    <string name="settings_bottom_navigation">Bottom navigation</string>
    <string name="settings_interaction">Interaction</string>
    <string name="settings_single_use_tags">Show rarely-used tags</string>
    <string name="settings_single_use_tags_desc_off">Rarely-used tags will not be shown</string>
    <string name="settings_single_use_tags_desc_on">Rarely-used tags will be shown</string>
    <string name="settings_show_broken">Broken stations</string>
    <string name="settings_show_broken_on">Show broken stations in lists</string>
    <string name="settings_show_broken_off">Do not show broken stations in lists</string>
    <string name="settings_startup_behaviour">Start Behavior</string>
    <string name="startup_action_title">Start action</string>
    <string name="startup_action_title_desc">%s</string>
    <string name="startup_show_all_stations">Show all stations</string>
    <string name="startup_show_favorites">Show favorites</string>
    <string name="startup_show_history">Show history</string>
    <string name="startup_show_last_view">Last view</string>
    <string name="settings_load_icons">Show station icons</string>
    <string name="settings_load_icons_on">Icons will be downloaded</string>
    <string name="settings_load_icons_off">Icons will not be downloaded</string>
    <string name="settings_auto_favorite">Auto-favorites</string>
    <string name="settings_auto_favorite_on">Add stations automatically to favorites when playing</string>
    <string name="settings_auto_favorite_off">Do not add stations automatically to favorites when playing</string>
    <string name="settings_icon_click_toggles_favorite">Click-favorites</string>
    <string name="settings_icon_click_toggles_favorite_on">Click station icon to add or remove favorite station</string>
    <string name="settings_icon_click_toggles_favorite_off">Click station icon to start playing</string>
    <string name="settings_click_trend_icon_visible">Click trend icon</string>
    <string name="settings_click_trend_icon_visible_on">Icon will be visible</string>
    <string name="settings_click_trend_icon_visible_off">Icon will be hidden</string>
    <string name="settings_alarm">Alarm</string>
    <string name="settings_alarm_external">Enable external app</string>
    <string name="settings_alarm_external_desc_on">Open the alarm with default external app</string>
    <string name="settings_alarm_external_desc_off">Open the alarm with RadioDroid</string>
    <string name="settings_alarm_audio_player">Audio player</string>
    <string name="settings_alarm_sleep_timer">Sleep timer</string>
    <string name="settings_alarm_sleep_timer_desc">Stop playing after %1$s minutes</string>
    <string name="settings_play">Player</string>
    <string name="settings_auto_play_on_startup">Auto-play</string>
    <string name="settings_auto_play_on_startup_on">Play last station on startup</string>
    <string name="settings_auto_play_on_startup_off">Do not play last station on startup</string>
    <string name="settings_auto_off_on_startup">Auto-stop</string>
    <string name="settings_auto_off_on_startup_on">Use Auto-stop timer with auto-play</string>
    <string name="settings_auto_off_on_startup_off">Do not use Auto-stop timer with auto-play</string>
    <string name="settings_auto_off_sleep_timer">Auto-stop timer</string>
    <string name="settings_auto_off_sleep_timer_desc">Stop playing after %1$s minutes</string>
    <string name="settings_play_external">Enable external player</string>
    <string name="settings_play_external_desc_on">Play stations with external player</string>
    <string name="settings_play_external_desc_off">Play stations with RadioDroid</string>
    <string name="settings_equalizer">Equalizer</string>
    <string name="settings_connectivity">Connectivity</string>
    <string name="settings_connect_timeout">Connection timeout</string>
    <string name="settings_read_timeout">Read timeout</string>
    <string name="settings_resume_timeout">Resume timeout</string>
    <string name="settings_retry_timeout">Retry timeout</string>
    <string name="settings_retry_delay">Reconnection delay</string>
    <string name="settings_proxy">Proxy</string>
    <string name="settings_proxy_login">Username</string>
    <string name="settings_proxy_password">Password</string>
    <string name="settings_proxy_action_test">Test</string>
    <string name="settings_proxy_working">Successfully connected to %s</string>
    <string name="settings_seconds_format">%d seconds</string>
    <string name="settings_milliseconds_format">%d milliseconds</string>
    <string name="settings_warn_no_wifi">Off-Wi-Fi warning</string>
    <string name="settings_warn_no_wifi_on">Warn when playing without Wi-Fi connection</string>
    <string name="settings_warn_no_wifi_off">No warning when not on Wi-Fi connection</string>
    <string name="alert_select_mpd_server_name">Server name</string>
    <string name="alert_select_mpd_server_password">Server password</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="settings_mpd">Music Player Daemon</string>
    <string name="settings_view_mpd_servers">Your servers</string>
    <string name="settings_other">Other</string>
    <string name="settings_statistics">Statistics</string>
    <string name="settings_about">About RadioDroid</string>
    <string name="description_btn_setup_alarm">Set alarm</string>
    <string name="nav_item_statistics">Statistics</string>
    <string name="nav_item_about">About</string>
</resources>