<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/ic_play_arrow_24dp"
        android:title="@string/detail_play"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/detail_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_homepage"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/detail_weblink"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/detail_star"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_unstar"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/detail_unstar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_set_alarm"
        android:icon="@drawable/ic_query_builder_black_24dp"
        android:title="@string/nav_item_alarm"
        app:showAsAction="ifRoom"/>
</menu>