<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_item_stations"
        android:id="@+id/nav_item_stations"
        android:icon="@drawable/ic_list_24dp"/>

    <item android:title="@string/nav_item_starred"
        android:id="@+id/nav_item_starred"
        android:icon="@drawable/ic_star_black_24dp"/>

    <item android:title="@string/nav_item_history"
        android:id="@+id/nav_item_history"
        android:icon="@drawable/ic_restore_black_24dp"/>

    <item android:title="@string/nav_item_statistics"
        android:id="@+id/nav_item_serverinfo"
        android:icon="@drawable/ic_poll_24dp"/>

    <!--<item android:title="@string/nav_item_settings"
        android:id="@+id/nav_item_settings"
        android:icon="@drawable/ic_tune_24dp"/>-->

    <item android:title="@string/nav_item_about"
        android:id="@+id/nav_item_about"
        android:icon="@drawable/ic_live_help_24dp"/>

<!--    <item android:title="Others">
        <menu>
            <item
                android:title="Spam"
                android:icon="@drawable/spam"/>
            <item
                android:title="Bin"
                android:icon="@drawable/bin"/>
        </menu>
    </item>

    <group android:id="@+id/group_settings_id">

        <item android:title="Settings"
            android:icon="@drawable/settings"/>
        <item android:title="Help"
            android:icon="@drawable/help"/>
    </group>-->

</menu>