<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/detail_station_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detail_station_name_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/detail_station_tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_tags"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detail_station_tags_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/detail_station_country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_country"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detail_station_country_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/detail_station_language"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_language"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detail_station_language_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <LinearLayout
        android:id="@+id/detail_station_www_clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/detail_station_www"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_weblink"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail_station_www_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <Button
        android:id="@+id/detail_button_play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_play" />

    <Button
        android:id="@+id/detail_button_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_stop" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_share"
        android:id="@+id/detail_button_share" />

</LinearLayout>