<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_proxy_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hostname"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/edit_proxy_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/port"
            android:inputType="number" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_proxy_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_proxy_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_proxy_login"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_proxy_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_proxy_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text_test_proxy_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>