<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/mpd_server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/alert_select_mpd_server_name"
            android:layout_margin="10dp"
            android:maxLines="1"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/mpd_server_hostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/hostname"
                android:layout_toLeftOf="@id/mpd_server_port"
                android:layout_toStartOf="@id/mpd_server_port"/>

        <EditText
                android:id="@+id/mpd_server_port"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:hint="@string/port"
                android:text="6600"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/mpd_server_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/alert_select_mpd_server_password"
        android:layout_margin="10dp"
        android:maxLines="1"/>
</LinearLayout>